fix: update z-index

--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -274,8 +274,7 @@
 
   :global {
     .MuiPaper-root {
-      // position: relative;
-      // z-index: 1600;
+      z-index: 1600;
       border-top-right-radius: 1rem;
       border-top-left-radius: 1rem;
       overscroll-behavior: none;
